--- a/src/life-save-dialog/life-save-dialog.html
+++ b/src/life-save-dialog/life-save-dialog.html
@@ -7,7 +7,7 @@
 <dom-module id="life-save-dialog">
   <template>
     <paper-dialog>
-      <paper-input value="{{target.title}}"></paper-input>
+      <paper-input label="Title" value="{{target.title}}"></paper-input>
       <div style="position: relative;">
         <img src="[[target.dataUrl]]" style="max-height: 60vh; max-width: 100%; width: auto;">
       </div>
