--- a/src/cell.html
+++ b/src/cell.html
@@ -6,18 +6,18 @@
     this._state = 0; //cache
   };
 
-  Cell._getCellStateAt = function(x, y){
-    if( x < 0 || y < 0 || x >= this.gameManager.CELL_LENGTH_X || y >= this.gameManager.CELL_LENGTH_Y ){
-      return 0;
-    }
-    return this.gameManager.cells[ x + y * this.gameManager.CELL_LENGTH_X]._state;
-  };
-  Cell.getCellAt = function (x, y){
-    if( x < 0 || y < 0 || x >= this.gameManager.CELL_LENGTH_X || y >= this.gameManager.CELL_LENGTH_Y ){
-      return null;
-    }
-    return this.gameManager.cells[ x + y * this.gameManager.CELL_LENGTH_X];
-  };
+  // Cell._getCellStateAt = function(x, y){
+  //   if( x < 0 || y < 0 || x >= this.CELL_LENGTH_X || y >= this.CELL_LENGTH_Y ){
+  //     return 0;
+  //   }
+  //   return this.gameManager.cells[ x + y * this.gameManager.CELL_LENGTH_X]._state;
+  // };
+  // Cell.getCellAt = function (x, y){
+  //   if( x < 0 || y < 0 || x >= this.gameManager.CELL_LENGTH_X || y >= this.gameManager.CELL_LENGTH_Y ){
+  //     return null;
+  //   }
+  //   return this.gameManager.cells[ x + y * this.gameManager.CELL_LENGTH_X];
+  // };
 
   Cell.prototype.draw = function(){
     if(this.state){
@@ -25,15 +25,36 @@
       Cell.gameManager.context.fillRect(this.x * Cell.gameManager.CELL_SIZE, this.y * Cell.gameManager.CELL_SIZE, Cell.gameManager.CELL_SIZE, Cell.gameManager.CELL_SIZE);
     }
   };
-  Cell.prototype.update = function(){
-    var aliveCount = 0;
-
-    var directions = [[-1, -1], [0, -1], [1, -1],
-                      [-1, 0], [1, 0],
-                      [-1, 1], [0, 1], [1, 1]];
-    directions.forEach(function(d){
-      aliveCount += Cell._getCellStateAt(this.x + d[0], this.y + d[1]);
-    }.bind(this));
+  // Cell.prototype.update = function(){
+  //   var aliveCount = 0;
+  //
+  //   var directions = [[-1, -1], [0, -1], [1, -1],
+  //                     [-1, 0], [1, 0],
+  //                     [-1, 1], [0, 1], [1, 1]];
+  //   directions.forEach(function(d){
+  //     aliveCount += Cell._getCellStateAt(this.x + d[0], this.y + d[1]);
+  //   }.bind(this));
+  //
+  //   if(this._state){ //1, alive
+  //     if(aliveCount <= 1 || aliveCount >= 4){
+  //       this.state = 0;
+  //     }
+  //   }
+  //   else{ // 0, dead
+  //     if(aliveCount === 3){
+  //       this.state = 1;
+  //     }
+  //   }
+  // };
+  Cell.prototype.update = function(aliveCount){
+    // var aliveCount = 0;
+    //
+    // var directions = [[-1, -1], [0, -1], [1, -1],
+    //                   [-1, 0], [1, 0],
+    //                   [-1, 1], [0, 1], [1, 1]];
+    // directions.forEach(function(d){
+    //   aliveCount += Cell._getCellStateAt(this.x + d[0], this.y + d[1]);
+    // }.bind(this));
 
     if(this._state){ //1, alive
       if(aliveCount <= 1 || aliveCount >= 4){
@@ -46,4 +67,175 @@
       }
     }
   };
+
+  var GameManager = function(cellWidth, cellHeight, cellSize, canvas){
+    this.CELL_WIDTH = cellWidth;
+    this.CELL_HEIGHT = cellHeight;
+    this.CELL_SIZE = cellSize;
+
+    this.canvas = canvas;
+    this.context = canvas.getContext('2d');
+
+    this.cells = new Array(this.CELL_WIDTH * this.CELL_HEIGHT);
+    for(var i=0; i < this.cells.length; i++){
+      this.cells[i] = new Cell( i % this.CELL_WIDTH, Math.floor(i / this.CELL_WIDTH ));
+    }
+  };
+
+  GameManager.prototype.getCellAt = function (x, y){
+    if( x < 0 || y < 0 || x >= this.CELL_WIDTH || y >= this.CELL_HEIGHT ){
+      return null;
+    }
+    return this.cells[ x + y * this.CELL_WIDTH ];
+  };
+
+  GameManager.prototype._getCellStateAt = function(x, y){
+    if( x < 0 || y < 0 || x >= this.CELL_WIDTH || y >= this.CELL_HEIGHT ){
+      return 0;
+    }
+    return this.cells[ x + y * this.CELL_WIDTH ]._state;
+  };
+
+  GameManager.prototype.refreshCanvas = function(){
+    this.context.fillStyle = '#eeeeee';
+    this.context.fillRect(0, 0, this.canvas.width, this.canvas.height);
+  };
+
+  GameManager.prototype.draw = function(){
+    this.cells.forEach(function(cell){
+      cell._state = cell.state;
+      cell.draw();
+    });
+  };
+  GameManager.prototype.update = function(){
+    var directions = [[-1, -1], [0, -1], [1, -1],
+                      [-1, 0], [1, 0],
+                      [-1, 1], [0, 1], [1, 1]];
+
+    this.cells.forEach(function(cell){
+      var aliveCount = directions.reduce(function(accumulator, direction, index, array){
+        accumulator += this._getCellStateAt(cell.x + direction[0], cell.y + direction[1]);
+      }.bind(this), 0);
+      cell.update(aliveCount);
+    }.bind(this));
+  };
+
+
+  GameManager.prototype._parseRLE = function(src){
+    var result = [];
+    var line = '';
+    for(var stream = src; stream.length > 0; stream = stream.substring(consumed.length)){
+      var regexResult = stream.match(/(\d*)([bo\$!])/);
+
+      var consumed = regexResult[0];
+      var length = regexResult[1] || 1;
+      var type = regexResult[2];
+
+      if(type === 'o'){
+        line += '1'.repeat(length);
+      }
+      else if(type === 'b'){
+        line += '0'.repeat(length);
+      }
+      else if(type === '$'){
+        for(var i = length; i > 0; i--){
+          result.push(line);
+          line = '';
+        }
+      }
+      else if(type === '!'){
+        result.push(line);
+        break;
+      }
+    }
+    return result;
+  };
+
+  GameManager.prototype._encodeRLE = function(){
+    var accumulator = [];
+    var line = [];
+    for(i = 0; i < this.CELL_HEIGHT; i++){
+      for(j = 0; j < this.CELL_WIDTH; j++){
+        line.push(this.getCellAt(j, i).state);
+      }
+
+      var t = line.join('');
+      if(t.includes('1')){
+        accumulator.push(t);
+      }
+      else{
+        accumulator.push('');
+      }
+      line = [];
+    }
+
+    accumulator = accumulator.map(function(a){
+      if(a === ''){
+        return '$';
+      }
+      else{
+        return a + '$';
+      }
+    });
+
+    var rawPattern = accumulator.join('').replace(/0/g, 'b').replace(/1/g, 'o');;
+
+
+    var focusing = '';
+    var count = 0;
+    var result = '';
+    for(var stream = rawPattern; stream.length > 0; stream = stream.substring(1)){
+      if(stream[0] === focusing){
+        count++;
+      }
+      else{
+        if(count === 0){
+          // corner case: will be execute on the very first character of the stream
+          focusing = stream[0];
+          count = 1;
+        }
+        else if(count === 1){
+          result += '' + focusing;
+          focusing = stream[0];
+          count = 1;
+        }
+        else if(count > 1){
+          result += '' + count + focusing;
+          focusing = stream[0];
+          count = 1;
+        }
+      }
+    }
+    result += '!';
+
+    return result;
+  };
+
+
+  GameManager.prototype.injectPattern = function(startX, startY, pattern){
+    if(!Array.isArray(pattern)){
+      pattern = this._parseRLE(pattern);
+    }
+
+    var i, j; // i => vertical, j => horizontal
+    for(i = 0; i < pattern.length; i++){
+      for(j = 0; j < pattern[i].length; j++){
+        if(pattern[i][j] === "1"){
+          if(this.getCellAt(startX + j, startY + i)){
+            this.getCellAt(startX + j, startY + i).state = 1;
+          }
+        }
+      }
+    }
+  };
+
+  GameManager.prototype.clearCanvas = function(){
+    this.cells.forEach(function(c){
+      c.state = 0;
+      c._state = 0;
+    });
+    this.draw();
+  };
+
+
 </script>
