--- a/src/life-canvas-base/life-canvas-base.html
+++ b/src/life-canvas-base/life-canvas-base.html
@@ -1,9 +1,18 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../cell.html">
 
+
+<!-- - encode RLE
+- decode RLE
+- inject pattern
+- update/draw/ basic mainLoop
+- initialize
+- clear
+- resize -->
 
 <dom-module id="life-canvas-base">
   <template>
-    <canvas width$="[[_canvasWidth]]" height$="[[_canvasHeight]]">Your browser doesn't support html5 canvas.</canvas>
+    <canvas id="canvas" width$="[[_canvasWidth]]" height$="[[_canvasHeight]]">Your browser doesn't support html5 canvas.</canvas>
 
   </template>
 
@@ -49,10 +58,17 @@
           // notify: true,
           value: 4
         },
+        gameManager: {
+          type: Object
+        },
 
-        isPlaying:{
+        isPlaying: {    // isRunning -> isPlaying
           type: Boolean,
           value: false
+        },
+        refreshRate: {
+          type: Number,
+          value: 30
         }
       },
 
@@ -61,8 +77,8 @@
       ],
 
       ready: function(){
-      },
 
+      },
 
       _handleSizeChanged: function(width, height, cellSize, mode){
         if(mode === 'cell'){
@@ -77,7 +93,31 @@
           this._cellWidth = Math.floor(width / cellSize);
           this._cellHeight = Math.floor(height / cellSize);
         }
-      }
+
+        this.gameManager = new GameManager(this._cellWidth, this._cellHeight, this.cellSize, this.$.canvas);
+      },
+
+
+      // interface
+      injectPattern: function(startX, startY, pattern){
+        this.gameManager.injectPattern(startX, startY, pattern);
+      },
+      clearCanvas: function(){
+        this.gameManager.clearCanvas();
+      },
+
+      mainLoop: function(){
+        this.gameManager.refreshCanvas();
+
+        if(this.isPlaying){
+          this.gameManager.update();
+          this.gameManager.draw();
+        }
+
+        setTimeout(function(){
+          this.mainLoop();
+        }.bind(this), this.refreshRate);
+      },
     });
   </script>
 </dom-module>
