--- a/src/life-brush-editor/life-brush-editor.html
+++ b/src/life-brush-editor/life-brush-editor.html
@@ -3,12 +3,15 @@
 <link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 
 
+<link rel="import" href="../life-canvas-base/life-canvas-base.html">
+
 <dom-module id="life-brush-editor">
   <template>
     <paper-header-panel class="flex">
       <paper-toolbar>
         <div>Hello World!</div>
       </paper-toolbar>
+      <life-canvas-base></life-canvas-base>
       <div class="fit">content fits 100% below the header</div>
     </paper-header-panel>
 
